access_logs/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: default
      address: { socket_address: {address: 0.0.0.0, port_value: 80 }}
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config:
            stat_prefix: ingress_http
            codec_type: AUTO
            add_user_agent: true
            use_remote_address: true
            route_config:
              name: ipsum_route
              virtual_hosts:
              - name: local_ipsum
                domains: ["*"]
                routes:
                - match: { prefix: "/" }
                  route: { cluster: service_ipsum_echo }
            access_log:
              - name: envoy.file_access_log
                filter:
                  status_code_filter: 
                    comparison:
                      op: GE
                      value:
                        runtime_key: access_log_non_200
                        default_value: 201
                config:
                  path: "/tmp/envoy/ingress_http.log"
              - name: envoy.file_access_log
                filter:
                  status_code_filter: 
                    comparison:
                      op: EQ
                      value:
                        runtime_key: access_log_200
                        default_value: 200
                config:
                  path: "/tmp/envoy/ingress_http_200.log"
            http_filters:
              - name: envoy.router

  clusters:
    - name: service_ipsum_echo
      connect_timeout: 0.25s
      http_protocol_options: {}
      lb_policy: ROUND_ROBIN
      type: STATIC
      hosts:
        - socket_address: {address: 172.16.238.10, port_value: 5555 }
